[tool.poetry]
name = "fks_worker"
version = "0.1.0"
description = "FKS Background Worker (task scheduling & execution)"
license = "Proprietary"
readme = "README.md"  # README copied before editable install (see Dockerfile) so safe to include
authors = ["FKS <nunie.smith01@gmail.com>"]
packages = [ { include = "fks_worker", from = "src" } ]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
requests = "*"
pydantic = "^2.0"
celery = "^5.4.0"
flask = "^3.1.0"
numpy = ">=1.26"  # used by ensemble logic
gunicorn = "^23.0.0"
pytz = "*"

[tool.poetry.extras]
queue = ["redis", "rq"]
scheduler = ["apscheduler"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
httpx = "^0.27"
ruff = "^0.5.0"
mypy = "^1.17.1"
coverage = "^7.6.0"

[tool.poetry.scripts]
fks_worker = "fks_worker.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Central pytest config (avoid duplicate sections / confusion with legacy setup)
[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [".", "src"]
testpaths = ["src/tests"]
